--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p><i class="icon-location"></i>ul. Sobowska 3, Tarnobrzeg</p>
             </div>
     </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.8262167385383!2d21.751180476968532!3d50.63034507439421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473d35585894a0d1%3A0x3f1466b4b7beba65!2sSERWIS%20OPON.%20ZHU.%20Leszek%20Kozieja.!5e0!3m2!1spl!2spl!4v1690750931904!5m2!1spl!2spl" width="748" height="748" style="border-radius: 50px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.8262167385383!2d21.751180476968532!3d50.63034507439421!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473d35585894a0d1%3A0x3f1466b4b7beba65!2sSERWIS%20OPON.%20ZHU.%20Leszek%20Kozieja.!5e0!3m2!1spl!2spl!4v1690750931904!5m2!1spl!2spl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     </div>
 
