leszek kozieja delete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id = box>
         <div id ="top"><h1>SERVIS OPON</h1><br>508-299-346</div>
-        <div id="name">Leszek Kozieja</div>
+        <!--<div id="name">Leszek Kozieja</div>-->
         <div id="buttons">
             <a class="btn" href="#content"><h3>SAMOCHODY OSOBOWE</h3></a>
             <a class="btn" href="#contentf"><h3>CIĘŻKIE<br>POJAZDY</h3></a>
