--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div id="content">
         <div id="icontent"><h1>WYMIANA<br>OPON<br>W SAMOCHODACH<br>OSOBOWYCH i<br>DOSTAWCZYCH</h1></div>
-        <div id="icontent1">Zmieniając opony w samochodzie co sezon,<br> dbasz nie tylko o swoje bezpieczeństwo, <br>ale także oszczędzasz na zużyciu opon.<br>Nasz profesjonalny serwis<br> to Twój najlepszy wybór!</div>
+        <div id="icontent1">Zmieniając opony w samochodzie co sezon,<br> dbasz nie tylko o swoje bezpieczeństwo, <br>ale także oszczędzasz na zużyciu opon.<br>Nasz profesjonalny serwis<br> to Twój najlepszy wybór!<br>Zadzwoń i umów się na wymianę<br>508-299-346</div>
     </div>
     <div id="contentf">
         <div id ="icontentf"><h1>Wymiana opon<br> w pojazdach:<br> -Ciężarowych,<br> -Przemysłowych,<br>-OTR <br>-Wózkach Widłowych</h1></div>
